# learning-sqlx-rs

./: .env  Cargo.toml
examples/: 01_migrations.rs  02_select.rs  02_select_clean_architecture.rs
migrations/: 001_drop_tables.sql  002_Init_tables.sql  003_seed_data.sql  004_alter_tables.sql
src/: lib.rs
src/application/: mod.rs
src/application/member/: mod.rs
src/application/member/queries/: get_member_by_id.rs  get_members.rs  get_members_paginated.rs  mod.rs
src/application/organization/queries/: get_organizations_paginated.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: member.rs  organization.rs
src/domain/enums/: member_role.rs  mod.rs
src/domain/repository/: member_repository.rs  mod.rs  organization_repository.rs
src/domain/value_object/: email.rs  mod.rs  organization_id.rs  pagination.rs
src/infrastructure/: mod.rs
src/infrastructure/database/postgres/repositories/: member.rs  member_repository.rs  mod.rs  organization_repository.rs
