[package]
name = "learning-sqlx-rs"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "json", "time"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
derive_more = { version = "2.1.1", features = ["from", "display"] }

# TODO: look into "trait_variant"
async-trait = "0.1.89"
regex = "1.12.3"
